#2097:Add an option to add new Plugins to the selected tool in the GUI, refactored ToolTreeCell.java to be in its own class file, added tests for the new add plugin feature